crates/server/tests/analysis/snapshots/r#mod__analysis__alpha050__comparison_with_array_literal-2.snap
---
source: crates/server/tests/analysis/alpha050.rs
expression: "symbol_table.symbols.iter().map(|(_, symbol_info)|\nsymbol_info.to_string(&generic_types)).collect::<Vec<String>>()"
---
[
    "fun compare_arrays(arr: [Int]): Bool",
    "arr: [Int]",
    "arr: [Int]",
]
