crates/server/tests/analysis/snapshots/r#mod__analysis__alpha050__complex_function-2.snap
---
source: crates/server/tests/analysis/alpha050.rs
expression: "symbol_table.symbols.iter().map(|(_, symbol_info)|\nsymbol_info.to_string(&generic_types)).collect::<Vec<String>>()"
---
[
    "fun foo(a?: Int): Int",
    "a: Int",
    "a: Int",
    "a: Int",
    "x: Int",
    "fun foo(a?: Int): Int",
    "code: Int",
    "y: Int",
    "fun foo(a?: Int): Int",
    "code: Int",
]
