crates/server/tests/analysis/snapshots/r#mod__analysis__alpha050__complex_function.snap
---
source: crates/server/tests/analysis/alpha050.rs
expression: symbol_table.symbols
---
{
    5..=8: SymbolInfo {
        name: "foo",
        symbol_type: Function(
            FunctionSymbol {
                arguments: [
                    (
                        FunctionArgument {
                            name: "a",
                            data_type: Any,
                            is_optional: true,
                            default_value_type: Some(
                                Int,
                            ),
                            is_ref: false,
                        },
                        9..14,
                    ),
                ],
                is_public: false,
                compiler_flags: [],
                docs: None,
            },
        ),
        data_type: Any?,
        is_definition: true,
        undefined: false,
        span: 5..8,
        contexts: [],
    },
    9..=10: SymbolInfo {
        name: "a",
        symbol_type: Variable(
            VariableSymbol {
                is_const: false,
                is_public: false,
            },
        ),
        data_type: Any,
        is_definition: true,
        undefined: false,
        span: 9..10,
        contexts: [],
    },
    26..=27: SymbolInfo {
        name: "a",
        symbol_type: Variable(
            VariableSymbol {
                is_const: false,
                is_public: false,
            },
        ),
        data_type: Any,
        is_definition: false,
        undefined: false,
        span: 26..27,
        contexts: [
            Function(
                FunctionContext {
                    compiler_flags: [],
                },
            ),
        ],
    },
    69..=70: SymbolInfo {
        name: "a",
        symbol_type: Variable(
            VariableSymbol {
                is_const: false,
                is_public: false,
            },
        ),
        data_type: Any,
        is_definition: false,
        undefined: false,
        span: 69..70,
        contexts: [
            Function(
                FunctionContext {
                    compiler_flags: [],
                },
            ),
        ],
    },
    78..=79: SymbolInfo {
        name: "x",
        symbol_type: Variable(
            VariableSymbol {
                is_const: false,
                is_public: false,
            },
        ),
        data_type: Int,
        is_definition: true,
        undefined: false,
        span: 78..79,
        contexts: [],
    },
    82..=85: SymbolInfo {
        name: "foo",
        symbol_type: Function(
            FunctionSymbol {
                arguments: [
                    (
                        FunctionArgument {
                            name: "a",
                            data_type: Int,
                            is_optional: true,
                            default_value_type: Some(
                                Int,
                            ),
                            is_ref: false,
                        },
                        86..103,
                    ),
                ],
                is_public: false,
                compiler_flags: [],
                docs: None,
            },
        ),
        data_type: Int?,
        is_definition: false,
        undefined: false,
        span: 82..85,
        contexts: [],
    },
    95..=99: SymbolInfo {
        name: "code",
        symbol_type: Variable(
            VariableSymbol {
                is_const: false,
                is_public: false,
            },
        ),
        data_type: Int,
        is_definition: true,
        undefined: false,
        span: 95..99,
        contexts: [],
    },
    108..=109: SymbolInfo {
        name: "y",
        symbol_type: Variable(
            VariableSymbol {
                is_const: false,
                is_public: false,
            },
        ),
        data_type: Int,
        is_definition: true,
        undefined: false,
        span: 108..109,
        contexts: [],
    },
    112..=115: SymbolInfo {
        name: "foo",
        symbol_type: Function(
            FunctionSymbol {
                arguments: [
                    (
                        FunctionArgument {
                            name: "a",
                            data_type: Int,
                            is_optional: true,
                            default_value_type: Some(
                                Int,
                            ),
                            is_ref: false,
                        },
                        116..122,
                    ),
                ],
                is_public: false,
                compiler_flags: [],
                docs: None,
            },
        ),
        data_type: Int?,
        is_definition: false,
        undefined: false,
        span: 112..115,
        contexts: [],
    },
    131..=135: SymbolInfo {
        name: "code",
        symbol_type: Variable(
            VariableSymbol {
                is_const: false,
                is_public: false,
            },
        ),
        data_type: Int,
        is_definition: true,
        undefined: false,
        span: 131..135,
        contexts: [],
    },
}
