crates/server/tests/analysis/snapshots/r#mod__analysis__alpha050__failure_handlers-3.snap
---
source: tests/analysis/alpha050.rs
expression: backend.files.errors
---
{
    (
        FileId(
            0,
        ),
        FileVersion(
            1,
        ),
    ): [
        (
            "Exited handler should be used without any other handlers",
            68..74,
        ),
    ],
}
