crates/server/tests/analysis/snapshots/r#mod__analysis__alpha050__number_compared-2.snap
---
source: tests/analysis/alpha050.rs
expression: "symbol_table.symbols.iter().map(|(_, symbol_info)|\nsymbol_info.to_string(&generic_types)).collect::<Vec<String>>()"
---
[
    "fun math_abs(num: Num | Int): Num | Int",
    "num: Num | Int",
    "num: Num | Int",
    "num: Num | Int",
    "num: Num | Int",
]
